<resources>
    <string name="app_name">module_easeim</string>

    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="msg_recall_by_user">%1$s 撤回了一条消息</string>

    <string name="call_cancelled">已取消通话</string>
    <string name="chat_top_hint">要求到其他平台交流都是诈骗行为，<a>请举报，举报有奖</a>\n加微信、裸聊、要求转账约会都是诈骗行为！请勿相信！</string>

    <string name="attention">关注</string>
    <string name="canle_attention">取消关注</string>
    <string name="report">举报</string>
    <string name="add_blacklist">加入黑名单</string>
    <string name="clear_chat_record">清除聊天记录</string>
    <string name="personal_homepage">个人主页</string>

    <string name="chat_video">视频</string>
    <string name="chat_voice">语音</string>
    <string name="chat_gift">打赏</string>
    <string name="chat_photo">照片</string>
    <string name="chat_shoot">拍摄</string>
    <string name="chat_camera">拍照</string>
    <string name="chat_welfare">福利</string>
    <string name="chat_league">加盟</string>
    <string name="chat_redpacket">发红包</string>
    <string name="chat_redpacket_5">发5包</string>
    <string name="chat_redpacket_6">发6包</string>
    <string name="chat_recharge">幸运大转盘</string>
    <string name="chat_game_rules">余额</string>
    <string name="chat_group_rules">排行榜</string>
    <string name="chat_group_profit">盈亏记录</string>
    <string name="chat_help">帮助</string>
    <string name="chat_customer_service">客服</string>
    <string name="chat_make_money">赚钱</string>

    <!-- 会话 -->
    <string name="no_unread_messages">暂无未读消息</string>
    <string name="has_unread_mssages">[%s条未读消息]</string>
    <string name="mark_all_conversations_as_read">是否将所有消息标记为已读？</string>
    <string name="clear_all_conversations">是否删除所有消息？</string>

    <string name="system_message">系统消息</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="no_call_data">没有通话数据</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="is_connecting">正在接通中...</string>
    <string name="have_connected_with">已经和对方建立连接</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="consume_coins_per_minute">消耗 %d 爱豆/分钟</string>
    <string name="income_coins_per_minute">收入 %d 爱豆/分钟</string>
    <string name="cancel">取消</string>
    <string name="reject">拒接</string>
    <string name="answer">接听</string>

    <string name="redpacket">红包</string>

    <!-- 通讯录 -->
    <string name="official_customer_service">官方客服</string>
    <string name="invite_my_friend">邀请我的好友</string>
    <string name="my_invite_friend">我邀请的好友</string>
    <string name="contact">通讯录</string>

    <!-- 群信息 -->
    <string name="room_info">群信息</string>
    <string name="group_notice">群二维码</string>
    <string name="group_rules">群规则</string>
    <string name="game_rules">群公告</string>
    <string name="game_nickname">我在本群的昵称</string>
    <string name="voice_notify">消息免打扰</string>
    <string name="show_top">置顶聊天</string>
    <string name="show_group_nickname">显示群成员昵称</string>
    <string name="show_clear_message">清空聊天记录</string>
    <string name="delete_and_exit">删除并退出</string>

    <!-- -->
    <string name="friend_conversation_list">好友会话列表</string>
    <string name="custiner_service_list">客服列表</string>


    <!-- 个人信息页 -->
    <string name="personality_signature">个性签名</string>
    <string name="default_signature">本宝宝暂时没有想到个性的签名!~</string>
    <string name="price_of_chat">聊天价格</string>
    <string name="gifts_given">送出礼物</string>
    <string name="gifts_received">收到打赏</string>
    <!--<string name="contact">联系方式</string>-->
    <string name="view_phone_number">查看手机</string>
    <string name="view_wx_number">查看微信</string>
    <string name="view_qq_number">查看ＱＱ</string>
    <string name="server_point">评价值:%.2f</string>
    <string name="res_tate">接通率:%d%%</string>

    <string name="check_and_pay_coins">继续查看并支付 %d爱豆</string>

    <!-- 红包 -->
    <string name="redpacket_detail">红包详情</string>
    <string name="mine_redpacket">扫雷红包</string>
    <string name="shenghuang_redpacket">盛煌红包</string>
    <string name="gun_control_redpacket">禁抢红包</string>
    <string name="niuniu_redpacket">牛牛红包</string>
    <string name="welfare_redpacket">福利红包</string>
    <string name="send_mine_redpacket">发送雷包</string>
    <string name="redpacket_money_not_less_than">红包金额不能小于：%.2f元</string>
    <string name="redpacket_money_not_more_than">红包金额不能大于：%.2f元</string>
    <string name="redpacket_money_scope">红包发布范围：%.2f-%.2f元</string>
    <string name="redpacket_number_scope">红包个数范围：%d-%d</string>
    <string name="redpacket_number_not_empty">红包个数不能为空!</string>
    <string name="mine_scope">雷数范围：0-9</string>
    <string name="send_redpacket">塞钱进红包</string>

    <string name="redpacket_already_received">红包已领取</string>
    <string name="redpackets_have_expired">红包已过期</string>
    <string name="redpackets_are_gone">红包已抢完</string>
    <string name="check_redpacket">查看红包</string>

    <string name="send_redpacket_user">发包用户【%s】</string>
    <string name="send_redpacket_money">发包金额【￥%.2f】</string>
    <string name="send_redpacket_number">发包数量【%d】</string>
    <string name="redpacket_game_rules">红包玩法【%s】</string>
    <string name="mine_number">埋雷号码【%s】</string>
    <string name="bomb_number">中雷数量【%d】</string>
    <string name="redpacket_odds">红包赔率【%.2f】</string>
    <string name="award_money">奖励金额【￥%.2f】</string>


</resources>
