<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/public_CommonPadding_s"
                android:textColor="@color/common_text_light"
                android:textSize="@dimen/text_small"
                android:text="@string/official_customer_service"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_customer_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/public_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/public_CommonPadding_s"
                android:textColor="@color/common_text_light"
                android:textSize="@dimen/text_small"
                android:text="@string/invite_my_friend"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_invite_my_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/public_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/public_CommonPadding_s"
                android:textColor="@color/common_text_light"
                android:textSize="@dimen/text_small"
                android:text="@string/my_invite_friend"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
