<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/public_include_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/public_white"/>
            <TextView
                android:id="@+id/tv_user_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/public_white"
                android:padding="@dimen/spacing_xs"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/public_red"
                tools:text="全部群成员（1000）>"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                style="@style/public_CommonPadding_m"
                android:background="@color/public_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/common_text"
                    android:text="@string/group_name"/>

                <TextView
                    android:id="@+id/tv_group_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/spacing_m"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/common_text_light"
                    tools:text="测试"/>
            </LinearLayout>

            <View style="@style/public_CommonLine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/public_CommonPadding_m"
                android:background="@color/public_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/common_text"
                    android:text="@string/group_affiche"/>

                <TextView
                    android:id="@+id/tv_group_affiche"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/spacing_xl"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/common_text_light"
                    tools:text="测试"/>
            </LinearLayout>

            <View style="@style/public_CommonLine"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/public_CommonPadding_m"
                android:background="@color/public_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/common_text"
                    android:text="@string/group_notice"/>

                <TextView
                    android:id="@+id/tv_group_notice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/spacing_xl"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/common_text_light"
                    tools:text="测试"/>
            </LinearLayout>

            <View style="@style/public_CommonLine"/>
            <LinearLayout
                android:id="@+id/ll_group_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/public_CommonPadding_m"
                android:background="@color/public_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/common_text"
                    android:text="@string/group_rules"/>

                <TextView
                    android:id="@+id/tv_group_rules"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/spacing_xl"
                    android:drawableRight="@drawable/icon_group_set"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/common_text_light"
                    tools:text="测试"/>

            </LinearLayout>

            <View style="@style/public_CommonLine"/>
            <LinearLayout
                android:id="@+id/ll_game_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/public_CommonPadding_m"
                android:background="@color/public_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/common_text"
                    android:text="@string/game_rules"/>

                <TextView
                    android:id="@+id/tv_game_rules"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/spacing_xl"
                    android:drawableRight="@drawable/icon_group_set"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/common_text_light"
                    tools:text="测试"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                style="@style/public_CommonPadding_m"
                android:background="@color/public_white"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/common_text"
                    android:text="@string/voice_notify"/>

                <Switch
                    android:id="@+id/switch_voice_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_delect_exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xxl"
                style="@style/public_CommonPadding_m"
                android:gravity="center_horizontal"
                android:background="@drawable/btn_common_selector"
                android:text="@string/delete_and_exit"
                android:textColor="@color/public_white"
                android:textSize="@dimen/text_normal" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
